Update colors builder and backgrounds utilities.

--- a/nbs/builders/colors.ipynb
+++ b/nbs/builders/colors.ipynb
@@ -389,20 +389,13 @@
     "    \n",
     "    def __getattr__(\n",
     "        self,\n",
-    "        name: str  # Attribute name (color-shade or special value)\n",
-    "    ) -> Union[ColoredUtility, 'ColorFamilyProxy']:  # ColoredUtility or proxy for shades\n",
+    "        name: str  # Attribute name (special value or arbitrary)\n",
+    "    ) -> ColoredUtility:  # ColoredUtility for arbitrary values\n",
     "        \"\"\"\n",
-    "        Handle attribute access for colors.\n",
-    "        Examples: bg.red_500, text.blue_300, border.transparent\n",
+    "        Handle attribute access for arbitrary color values.\n",
+    "        Note: For standard colors, use the structured approach: bg.red._500\n",
     "        \"\"\"\n",
-    "        # Handle underscore notation for color-shade (e.g., red_500)\n",
-    "        if \"_\" in name:\n",
-    "            parts = name.split(\"_\", 1)\n",
-    "            if len(parts) == 2 and is_valid_color_family(parts[0]):\n",
-    "                color_spec = f\"{parts[0]}-{parts[1]}\"\n",
-    "                return ColoredUtility(self.prefix, color_spec)\n",
-    "        \n",
-    "        # Handle arbitrary color values\n",
+    "        # Only handle arbitrary color values here\n",
     "        return ColoredUtility(self.prefix, name.replace(\"_\", \"-\"))\n",
     "    \n",
     "    def get_info(\n",
@@ -419,8 +412,8 @@
     "                'shades': shades,\n",
     "                'special_colors': list(SPECIAL_COLORS.keys()),\n",
     "                'usage_examples': [\n",
-    "                    f'{self.prefix}.red_500',\n",
-    "                    f'{self.prefix}.blue_300.opacity(75)',\n",
+    "                    f'{self.prefix}.red._500',\n",
+    "                    f'{self.prefix}.blue._300.opacity(75)',\n",
     "                    f'{self.prefix}(\"red-500\", opacity=50)',\n",
     "                    f'{self.prefix}.transparent',\n",
     "                    f'{self.prefix}(\"#ff0000\")',\n",
@@ -464,6 +457,19 @@
     "        \"\"\"Initialize with prefix and color family.\"\"\"\n",
     "        self.prefix = prefix\n",
     "        self.color_family = color_family\n",
+    "        \n",
+    "        # Add shade properties for autocomplete\n",
+    "        self._50 = ColoredUtility(prefix, f\"{color_family}-50\")\n",
+    "        self._100 = ColoredUtility(prefix, f\"{color_family}-100\")\n",
+    "        self._200 = ColoredUtility(prefix, f\"{color_family}-200\")\n",
+    "        self._300 = ColoredUtility(prefix, f\"{color_family}-300\")\n",
+    "        self._400 = ColoredUtility(prefix, f\"{color_family}-400\")\n",
+    "        self._500 = ColoredUtility(prefix, f\"{color_family}-500\")\n",
+    "        self._600 = ColoredUtility(prefix, f\"{color_family}-600\")\n",
+    "        self._700 = ColoredUtility(prefix, f\"{color_family}-700\")\n",
+    "        self._800 = ColoredUtility(prefix, f\"{color_family}-800\")\n",
+    "        self._900 = ColoredUtility(prefix, f\"{color_family}-900\")\n",
+    "        self._950 = ColoredUtility(prefix, f\"{color_family}-950\")\n",
     "    \n",
     "    def __getattr__(\n",
     "        self,\n",
@@ -515,9 +521,9 @@
     "bg = ColoredFactory(\"bg\", \"Background color utilities\")\n",
     "\n",
     "# Test standard color-shade combinations\n",
-    "assert str(bg.red_500) == \"bg-red-500\"\n",
-    "assert str(bg.blue_300) == \"bg-blue-300\"\n",
-    "assert str(bg.green_950) == \"bg-green-950\""
+    "assert str(bg.red._500) == \"bg-red-500\"\n",
+    "assert str(bg.blue._300) == \"bg-blue-300\"\n",
+    "assert str(bg.green._950) == \"bg-green-950\""
    ]
   },
   {
@@ -559,12 +565,12 @@
    "outputs": [],
    "source": [
     "# Test opacity modifiers\n",
-    "assert str(bg.red_500.opacity(50)) == \"bg-red-500/50\"\n",
-    "assert str(bg.blue_300.opacity(75)) == \"bg-blue-300/75\"\n",
+    "assert str(bg.red._500.opacity(50)) == \"bg-red-500/50\"\n",
+    "assert str(bg.blue._300.opacity(75)) == \"bg-blue-300/75\"\n",
     "assert str(bg.black.opacity(10)) == \"bg-black/10\"\n",
     "\n",
     "# Test opacity with arbitrary values\n",
-    "assert str(bg.red_500.opacity(\"[0.87]\")) == \"bg-red-500/[0.87]\""
+    "assert str(bg.red._500.opacity(\"[0.87]\")) == \"bg-red-500/[0.87]\""
    ]
   },
   {
@@ -689,10 +695,10 @@
     "    \"\"\"Test ColoredFactory with various color specifications.\"\"\"\n",
     "    bg = ColoredFactory(\"bg\")\n",
     "    \n",
-    "    # Test standard colors\n",
-    "    assert str(bg.red_500) == \"bg-red-500\"\n",
-    "    assert str(bg.blue_300) == \"bg-blue-300\"\n",
-    "    assert str(bg.green_950) == \"bg-green-950\"\n",
+    "    # Test standard colors with structured approach\n",
+    "    assert str(bg.red._500) == \"bg-red-500\"\n",
+    "    assert str(bg.blue._300) == \"bg-blue-300\"\n",
+    "    assert str(bg.green._950) == \"bg-green-950\"\n",
     "    \n",
     "    # Test special colors\n",
     "    assert str(bg.transparent) == \"bg-transparent\"\n",
@@ -720,13 +726,13 @@
     "    bg = ColoredFactory(\"bg\")\n",
     "    \n",
     "    # Test opacity with standard colors\n",
-    "    assert str(bg.red_500.opacity(50)) == \"bg-red-500/50\"\n",
-    "    assert str(bg.blue_300.opacity(75)) == \"bg-blue-300/75\"\n",
+    "    assert str(bg.red._500.opacity(50)) == \"bg-red-500/50\"\n",
+    "    assert str(bg.blue._300.opacity(75)) == \"bg-blue-300/75\"\n",
     "    assert str(bg.black.opacity(10)) == \"bg-black/10\"\n",
     "    \n",
     "    # Test opacity with arbitrary values\n",
-    "    assert str(bg.red_500.opacity(\"[0.87]\")) == \"bg-red-500/[0.87]\"\n",
-    "    assert str(bg.blue_300.opacity(\"(--my-opacity)\")) == \"bg-blue-300/(--my-opacity)\"\n",
+    "    assert str(bg.red._500.opacity(\"[0.87]\")) == \"bg-red-500/[0.87]\"\n",
+    "    assert str(bg.blue._300.opacity(\"(--my-opacity)\")) == \"bg-blue-300/(--my-opacity)\"\n",
     "    \n",
     "    # Test opacity in factory call\n",
     "    assert str(bg(\"green-600\", opacity=25)) == \"bg-green-600/25\"\n",
@@ -782,6 +788,23 @@
     "    assert str(bg.red._500) == \"bg-red-500\"\n",
     "    assert str(bg.red._950) == \"bg-red-950\"\n",
     "    \n",
+    "    # Test all shade attributes are available for autocomplete\n",
+    "    assert hasattr(bg.red, '_50')\n",
+    "    assert hasattr(bg.red, '_100')\n",
+    "    assert hasattr(bg.red, '_200')\n",
+    "    assert hasattr(bg.red, '_300')\n",
+    "    assert hasattr(bg.red, '_400')\n",
+    "    assert hasattr(bg.red, '_500')\n",
+    "    assert hasattr(bg.red, '_600')\n",
+    "    assert hasattr(bg.red, '_700')\n",
+    "    assert hasattr(bg.red, '_800')\n",
+    "    assert hasattr(bg.red, '_900')\n",
+    "    assert hasattr(bg.red, '_950')\n",
+    "    \n",
+    "    # Verify they are ColoredUtility instances\n",
+    "    assert isinstance(bg.blue._300, ColoredUtility)\n",
+    "    assert isinstance(bg.green._600, ColoredUtility)\n",
+    "    \n",
     "    # Test call syntax on proxy\n",
     "    assert str(bg.blue(\"300\")) == \"bg-blue-300\"\n",
     "    assert str(bg.green(ColorShade.SHADE_600)) == \"bg-green-600\"\n",
@@ -817,14 +840,14 @@
     "    border = ColoredFactory(\"border\", \"Border color utilities\")\n",
     "    \n",
     "    # Test same color across different utilities\n",
-    "    assert str(bg.red_500) == \"bg-red-500\"\n",
-    "    assert str(text.red_500) == \"text-red-500\"\n",
-    "    assert str(border.red_500) == \"border-red-500\"\n",
+    "    assert str(bg.red._500) == \"bg-red-500\"\n",
+    "    assert str(text.red._500) == \"text-red-500\"\n",
+    "    assert str(border.red._500) == \"border-red-500\"\n",
     "    \n",
     "    # Test with opacity\n",
-    "    assert str(bg.blue_300.opacity(50)) == \"bg-blue-300/50\"\n",
-    "    assert str(text.blue_300.opacity(50)) == \"text-blue-300/50\"\n",
-    "    assert str(border.blue_300.opacity(50)) == \"border-blue-300/50\"\n",
+    "    assert str(bg.blue._300.opacity(50)) == \"bg-blue-300/50\"\n",
+    "    assert str(text.blue._300.opacity(50)) == \"text-blue-300/50\"\n",
+    "    assert str(border.blue._300.opacity(50)) == \"border-blue-300/50\"\n",
     "    \n",
     "    # Test special colors\n",
     "    assert str(bg.transparent) == \"bg-transparent\"\n",
@@ -854,10 +877,10 @@
     "    \n",
     "    # Create a colored card component\n",
     "    card = Div(\n",
-    "        P(\"Hello World\", cls=str(text.gray_700)),\n",
+    "        P(\"Hello World\", cls=str(text.gray._700)),\n",
     "        cls=combine_classes(\n",
     "            bg.white,\n",
-    "            border.gray_200,\n",
+    "            border.gray._200,\n",
     "            \"rounded-lg p-4 border\"\n",
     "        )\n",
     "    )\n",
@@ -1032,14 +1055,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a4eb8fa2-a15b-4c4c-8449-f85d47e2704d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b6e7d1b-adb1-434a-9d13-c3eb03ee4820",
    "metadata": {},
    "outputs": [],
    "source": []
