--- a/nbs/utilities/backgrounds.ipynb
+++ b/nbs/utilities/backgrounds.ipynb
@@ -183,10 +183,33 @@
     "#| export\n",
     "def test_backgrounds_color_examples():\n",
     "    \"\"\"Test background color utilities with various color values.\"\"\"\n",
-    "    # Standard colors\n",
-    "    assert str(bg.red_500) == \"bg-red-500\"\n",
-    "    assert str(bg.blue_300) == \"bg-blue-300\"\n",
-    "    assert str(bg.green_950) == \"bg-green-950\"\n",
+    "    # Test all 22 Tailwind color families\n",
+    "    assert str(bg.red._500) == \"bg-red-500\"\n",
+    "    assert str(bg.orange._500) == \"bg-orange-500\"\n",
+    "    assert str(bg.amber._500) == \"bg-amber-500\"\n",
+    "    assert str(bg.yellow._500) == \"bg-yellow-500\"\n",
+    "    assert str(bg.lime._500) == \"bg-lime-500\"\n",
+    "    assert str(bg.green._500) == \"bg-green-500\"\n",
+    "    assert str(bg.emerald._500) == \"bg-emerald-500\"\n",
+    "    assert str(bg.teal._500) == \"bg-teal-500\"\n",
+    "    assert str(bg.cyan._500) == \"bg-cyan-500\"\n",
+    "    assert str(bg.sky._500) == \"bg-sky-500\"\n",
+    "    assert str(bg.blue._500) == \"bg-blue-500\"\n",
+    "    assert str(bg.indigo._500) == \"bg-indigo-500\"\n",
+    "    assert str(bg.violet._500) == \"bg-violet-500\"\n",
+    "    assert str(bg.purple._500) == \"bg-purple-500\"\n",
+    "    assert str(bg.fuchsia._500) == \"bg-fuchsia-500\"\n",
+    "    assert str(bg.pink._500) == \"bg-pink-500\"\n",
+    "    assert str(bg.rose._500) == \"bg-rose-500\"\n",
+    "    assert str(bg.slate._500) == \"bg-slate-500\"\n",
+    "    assert str(bg.gray._500) == \"bg-gray-500\"\n",
+    "    assert str(bg.zinc._500) == \"bg-zinc-500\"\n",
+    "    assert str(bg.neutral._500) == \"bg-neutral-500\"\n",
+    "    assert str(bg.stone._500) == \"bg-stone-500\"\n",
+    "    \n",
+    "    # Test different shades\n",
+    "    assert str(bg.blue._300) == \"bg-blue-300\"\n",
+    "    assert str(bg.green._950) == \"bg-green-950\"\n",
     "    \n",
     "    # Special colors\n",
     "    assert str(bg.transparent) == \"bg-transparent\"\n",
@@ -198,6 +221,14 @@
     "# Run the tests\n",
     "test_backgrounds_color_examples()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7e6207a-a668-4283-90a1-369b8811b798",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -220,13 +251,13 @@
     "def test_backgrounds_opacity_examples():\n",
     "    \"\"\"Test background colors with opacity modifiers.\"\"\"\n",
     "    # Standard opacity values\n",
-    "    assert str(bg.red_500.opacity(50)) == \"bg-red-500/50\"\n",
-    "    assert str(bg.blue_300.opacity(75)) == \"bg-blue-300/75\"\n",
+    "    assert str(bg.red._500.opacity(50)) == \"bg-red-500/50\"\n",
+    "    assert str(bg.blue._300.opacity(75)) == \"bg-blue-300/75\"\n",
     "    assert str(bg.black.opacity(10)) == \"bg-black/10\"\n",
     "    \n",
     "    # Arbitrary opacity values\n",
-    "    assert str(bg.green_600.opacity(\"[0.87]\")) == \"bg-green-600/[0.87]\"\n",
-    "    assert str(bg.purple_400.opacity(\"(--my-opacity)\")) == \"bg-purple-400/(--my-opacity)\"\n",
+    "    assert str(bg.green._600.opacity(\"[0.87]\")) == \"bg-green-600/[0.87]\"\n",
+    "    assert str(bg.purple._400.opacity(\"(--my-opacity)\")) == \"bg-purple-400/(--my-opacity)\"\n",
     "\n",
     "# Run the tests\n",
     "test_backgrounds_opacity_examples()"
@@ -664,8 +695,8 @@
     "def test_backgrounds_gradient_stops_examples():\n",
     "    \"\"\"Test gradient color stop utilities.\"\"\"\n",
     "    # Test from colors\n",
-    "    assert str(from_color.red_500) == \"from-red-500\"\n",
-    "    assert str(from_color.blue_300) == \"from-blue-300\"\n",
+    "    assert str(from_color.red._500) == \"from-red-500\"\n",
+    "    assert str(from_color.blue._300) == \"from-blue-300\"\n",
     "    assert str(from_color.transparent) == \"from-transparent\"\n",
     "    assert str(from_color.black.opacity(50)) == \"from-black/50\"\n",
     "    \n",
@@ -681,20 +712,20 @@
     "    assert str(from_color(\"10px\")) == \"from-[10px]\"\n",
     "    \n",
     "    # Test via colors\n",
-    "    assert str(via_color.green_400) == \"via-green-400\"\n",
-    "    assert str(via_color.purple_600) == \"via-purple-600\"\n",
+    "    assert str(via_color.green._400) == \"via-green-400\"\n",
+    "    assert str(via_color.purple._600) == \"via-purple-600\"\n",
     "    assert str(via_color.white) == \"via-white\"\n",
-    "    assert str(via_color.yellow_200.opacity(75)) == \"via-yellow-200/75\"\n",
+    "    assert str(via_color.yellow._200.opacity(75)) == \"via-yellow-200/75\"\n",
     "    \n",
     "    # Test via percentages\n",
     "    assert str(via_color._50) == \"via-50%\"\n",
     "    assert str(via_color(75)) == \"via-75%\"\n",
     "    \n",
     "    # Test to colors\n",
-    "    assert str(to_color.pink_500) == \"to-pink-500\"\n",
-    "    assert str(to_color.indigo_700) == \"to-indigo-700\"\n",
+    "    assert str(to_color.pink._500) == \"to-pink-500\"\n",
+    "    assert str(to_color.indigo._700) == \"to-indigo-700\"\n",
     "    assert str(to_color.current) == \"to-current\"\n",
-    "    assert str(to_color.cyan_300.opacity(25)) == \"to-cyan-300/25\"\n",
+    "    assert str(to_color.cyan._300.opacity(25)) == \"to-cyan-300/25\"\n",
     "    \n",
     "    # Test to percentages\n",
     "    assert str(to_color._100) == \"to-100%\"\n",
@@ -740,8 +771,8 @@
     "        \"Gradient Background\",\n",
     "        cls=combine_classes(\n",
     "            bg_linear.to_r,\n",
-    "            from_color.blue_500,\n",
-    "            to_color.purple_600,\n",
+    "            from_color.blue._500,\n",
+    "            to_color.purple._600,\n",
     "            \"p-8 text-white\"\n",
     "        )\n",
     "    )\n",
@@ -754,9 +785,9 @@
     "        \"Three Color Gradient\",\n",
     "        cls=combine_classes(\n",
     "            bg_linear.to_br,\n",
-    "            from_color.red_400,\n",
-    "            via_color.yellow_500,\n",
-    "            to_color.green_600,\n",
+    "            from_color.red._400,\n",
+    "            via_color.yellow._500,\n",
+    "            to_color.green._600,\n",
     "            \"p-8 text-white\"\n",
     "        )\n",
     "    )\n",
@@ -767,8 +798,8 @@
     "        \"Angled Gradient\",\n",
     "        cls=combine_classes(\n",
     "            bg_linear._45,\n",
-    "            from_color.indigo_500,\n",
-    "            to_color.pink_500,\n",
+    "            from_color.indigo._500,\n",
+    "            to_color.pink._500,\n",
     "            \"p-8\"\n",
     "        )\n",
     "    )\n",
@@ -779,8 +810,8 @@
     "        \"Radial Gradient\",\n",
     "        cls=combine_classes(\n",
     "            bg_radial(),\n",
-    "            from_color.indigo_300,\n",
-    "            to_color.pink_500,\n",
+    "            from_color.indigo._300,\n",
+    "            to_color.pink._500,\n",
     "            \"p-16\"\n",
     "        )\n",
     "    )\n",
@@ -791,9 +822,9 @@
     "        \"Conic Gradient\",\n",
     "        cls=combine_classes(\n",
     "            bg_conic._180,\n",
-    "            from_color.red_500,\n",
-    "            via_color.yellow_500,\n",
-    "            to_color.blue_500,\n",
+    "            from_color.red._500,\n",
+    "            via_color.yellow._500,\n",
+    "            to_color.blue._500,\n",
     "            \"p-16\"\n",
     "        )\n",
     "    )\n",
@@ -817,11 +848,11 @@
     "        \"Gradient with positions\",\n",
     "        cls=combine_classes(\n",
     "            bg_linear.to_r,\n",
-    "            from_color.blue_500,\n",
+    "            from_color.blue._500,\n",
     "            from_color._10,  # Start at 10%\n",
-    "            via_color.green_500,\n",
+    "            via_color.green._500,\n",
     "            via_color._50,   # Middle at 50%\n",
-    "            to_color.red_500,\n",
+    "            to_color.red._500,\n",
     "            to_color._90,    # End at 90%\n",
     "            \"p-8\"\n",
     "        )\n",
@@ -1152,54 +1183,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b8ab901-14bf-4b9e-bf90-47a01d4f4b99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71a5e2a7-2db6-495e-81a7-1757f80736de",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c238642-d853-4e2b-8b6f-a3bcb40653e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e52d405-a192-43d1-85d1-51a91e897826",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a19cb247-4b9b-420c-a24d-4d0959f362fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e3883c5-02c8-4508-8b1d-d2cef0a40555",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "f07bfadd-4cb7-486a-b929-73a58bb7a256",
    "metadata": {},
@@ -1225,7 +1208,7 @@
     "    card = Div(\n",
     "        H1(\"Welcome\", cls=\"text-white\"),\n",
     "        P(\"This is a card with a blue background\"),\n",
-    "        cls=combine_classes(bg.blue_500, \"p-6 rounded-lg\")\n",
+    "        cls=combine_classes(bg.blue._500, \"p-6 rounded-lg\")\n",
     "    )\n",
     "    assert \"bg-blue-500\" in card.attrs['class']\n",
     "    \n",
@@ -1253,8 +1236,8 @@
     "            bg_clip.text,\n",
     "            \"text-transparent\",\n",
     "            bg_linear.to_r,\n",
-    "            from_color.blue_500,\n",
-    "            to_color.purple_600\n",
+    "            from_color.blue._500,\n",
+    "            to_color.purple._600\n",
     "        )\n",
     "    )\n",
     "    assert \"bg-clip-text\" in gradient_text.attrs['class']\n",
@@ -1328,86 +1311,6 @@
     "# Run the tests\n",
     "test_backgrounds_factory_documentation()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3929efff-c81a-4545-b9d1-48c5c27175f5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71312b87-3520-4545-bc37-80fa881dc0e4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53b7cd4c-122c-4c03-8e20-6377911e5066",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42cf570e-6801-48d5-a9f9-1ef3448d9f4a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4be0ad04-3aae-4c47-8908-b7e726ee5d45",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5143ea77-d8a9-4d5c-b6e5-3d787a8c4fe6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd9e935d-9d92-4e37-acf0-38c148f973e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0d9fee9-68ba-48a5-aab4-10fea66c2864",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "196387bb-60d0-4d14-b857-ac595d0164dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27704684-0978-43c7-9ff9-b68d74fb5c87",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
